[package]
name = "aws-secretsmanager-cache"
description = "A client for in-process caching of secrets from AWS Secrets manager"
version = "0.1.0"
authors = ["Adam Quigley"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adamjq/aws-secretsmanager-cache-rust"
repository = "https://github.com/adamjq/aws-secretsmanager-cache-rust"
readme = "README.md"
keywords = ["aws", "aws-secrets-manager", "aws-sdk-rust", "LRU", "cache"]
categories = ["caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.0.25-alpha"
aws-sdk-secretsmanager = "0.0.25-alpha"
tokio = { version = "1", features = ["full"] }
lru = "0.7.0"

[dev-dependencies]
lazy_static = "1.4.0"
async_once = "0.2.1"
