[package]
name = "aws-secretsmanager-cache"
description = "A client for in-process caching of secrets from AWS Secrets manager"
version = "0.5.0"
authors = ["Adam Quigley"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adamjq/aws-secretsmanager-cache-rust"
repository = "https://github.com/adamjq/aws-secretsmanager-cache-rust"
readme = "README.md"
keywords = ["aws", "aws-secrets-manager", "aws-sdk-rust", "LRU", "cache"]
categories = ["caching"]

[dependencies]
aws-config = "0.55.1"
aws-sdk-config = "0.26.0"
aws-sdk-secretsmanager = "0.26.0"
tokio = { version = "1.28.0", features = ["full"] }
lru = "0.10.0"

[dev-dependencies]
lazy_static = "1.4.0"
async_once = "0.2.6"
